# copywrite

./: .rustfmt.toml  Cargo.toml  README.md  copyright.txt
src/: copywriter.rs  filesystem.rs  git.rs  lib.rs  main.rs  template.rs
