[package]
name = "copywrite"
version = "0.1.8"
authors = ["patrik.hartlen@gmail.com"]
edition = "2021"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true  # Link time optimization

[dependencies]
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
log = "0"
env_logger = "0"
clap = "4"
encoding_rs = "0.8"
unicode-bom = "2"
walkdir = "2"
regex = "1"
tera = "1"
chrono = "0"
openssl = {version = "*", features = ["vendored"]}
git2 = "0"
os_str_bytes = "6"
